--- a/package.json
+++ b/package.json
@@ -4,20 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "open:android": "cap open android",
-    "open:ios": "cap open ios",
     "sync": "cap sync android && cap sync ios",
     "sync:android": "cap sync android",
     "sync:ios": "cap sync ios",
-    "run:android": "cap run android",
-    "run:ios": "cap run ios",
+    "android": "cap run android",
+    "ios": "cap run ios",
     "build:android": "./android gradlew build",
+    "open:android": "cap open android",
+    "open:ios": "cap open ios",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@capacitor-community/electron": "^4.0.3",
     "@capacitor/android": "^3.3.3",
     "@capacitor/app": "^1.0.7",
     "@capacitor/cli": "^3.3.3",
