feat: update files

--- a/android/app/src/main/assets/capacitor.config.json
+++ b/android/app/src/main/assets/capacitor.config.json
@@ -2,5 +2,10 @@
 	"appId": "com.company.appname",
 	"appName": "react-capacitor-stater",
 	"webDir": "build",
-	"bundledWebRuntime": false
+	"bundledWebRuntime": true,
+	"server": {
+		"allowNavigation": [
+			"google.com"
+		]
+	}
 }
