--- a/ios/App/App/capacitor.config.json
+++ b/ios/App/App/capacitor.config.json
@@ -2,5 +2,10 @@
 	"appId": "com.company.appname",
 	"appName": "react-capacitor-stater",
 	"webDir": "build",
-	"bundledWebRuntime": false
+	"bundledWebRuntime": true,
+	"server": {
+		"allowNavigation": [
+			"google.com"
+		]
+	}
 }
