feat: update files

--- a/android/app/src/main/assets/capacitor.config.json
+++ b/android/app/src/main/assets/capacitor.config.json
@@ -1,11 +1,11 @@
 {
 	"appId": "com.company.appname",
-	"appName": "react-capacitor-stater",
+	"appName": "Surreal AI",
 	"webDir": "build",
 	"bundledWebRuntime": false,
 	"server": {
 		"allowNavigation": [
-			"google.com"
+			"surreal-ai.com"
 		]
 	}
 }
