--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,9 @@
 node_modules
 build
+
+resources/android/icon
+resources/android/splash
+resources/ios/icon
+resources/ios/splash
+resources/windows/icon
+resources/windows/splash
