feat: update ios env

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "open:android": "cap open android",
     "open:ios": "cap open ios",
     "icons:android": "cordova-res android --skip-config --copy",
+    "icons:ios": "cordova-res ios --skip-config --copy",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
